@@ -8,6 +8,7 @@ NEW IN VERSION 1.4
 - Bug fix : bad path expression with postpone used to segfault
 - Bug fix : completion always matched on 3 characters of command instead
   of per-command length (broke completion for 'ls')
+- Copy permissions of old database to new database when saving
 
 NEW IN VERSION 1.3.1
 
@@ -99,4 +100,4 @@ NEW IN VERSION 0.7
 
 - Add tdlg to do log as a single command name.
 
-$Header: /cvs/src/tdl/NEWS,v 1.19 2003/05/05 22:05:41 richard Exp $
+$Header: /cvs/src/tdl/NEWS,v 1.20 2003/05/13 21:00:46 richard Exp $
